--- a/apps/site/src/index.html
+++ b/apps/site/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="utf-8" />
     <title>Site</title>
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <alacarta-root></alacarta-root>
+    <alacarta-root data-theme="mytheme"></alacarta-root>
   </body>
 </html>
