--- a/apps/site/src/index.html
+++ b/apps/site/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" >
-  <head>
-    <meta charset="utf-8" />
-    <title>Site</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <alacarta-root data-theme="mytheme"></alacarta-root>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="utf-8"/>
+    <title>Code Machina</title>
+    <base href="/"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+</head>
+<body>
+<cm-root data-theme="mytheme"></cm-root>
+</body>
 </html>
